# subprocessmagic-py

./: .gitattributes  .gitignore  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.bash
.github/workflows/: cx.yaml
tests/: subprocessing_test.py
